# invenio-pages

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  requirements.py  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
docs/_ext/: ultramock.py
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py
examples/templates/app/: default.html
invenio_pages/: __init__.py  admin.py  config.py  ext.py  models.py  proxies.py  rest.py  version.py  views.py  webpack.py
invenio_pages/administration/: __init__.py
invenio_pages/administration/views/: __init__.py  pages.py
invenio_pages/alembic/: 08a5708005b7_change_datetime_types.py  145402e8523a_create_pages_table.py  1737449793_add_language_and_new_uq.py  98e0a418340d_create_invenio_pages_branch.py  9fae3c5404d9_remove_has_custom_view_to_pages.py  __init__.py  b0f93ca4a147_add_has_custom_view_to_pages.py
invenio_pages/assets/semantic-ui/js/invenio_pages/search/: SearchResultItem.js  SearchResultsContainer.js  index.js
invenio_pages/assets/semantic-ui/translations/invenio_pages/: i18next-scanner.config.js  i18next.js  package-lock.json  package.json  translations.pot
invenio_pages/assets/semantic-ui/translations/invenio_pages/messages/en/: translations.json
invenio_pages/assets/semantic-ui/translations/invenio_pages/messages/tr/: translations.json
invenio_pages/assets/semantic-ui/translations/invenio_pages/scripts/: compileCatalog.js  initCatalog.js
invenio_pages/records/: __init__.py  errors.py  models.py
invenio_pages/resources/: __init__.py  config.py  resource.py
invenio_pages/serializers/: __init__.py  links.py  response.py  schema.py
invenio_pages/services/: __init__.py  config.py  permissions.py  results.py  schemas.py  service.py
invenio_pages/templates/invenio_pages/: base.html  create.html  default.html  default_base.html  dynamic.html  edit.html
invenio_pages/templates/invenio_pages/administration/: page-search.html  page_details.html  page_search.html
invenio_pages/translations/: invenio.pot  messages.pot
invenio_pages/translations/af/LC_MESSAGES/: messages.po
invenio_pages/translations/ar/LC_MESSAGES/: messages.po
invenio_pages/translations/bg/LC_MESSAGES/: messages.po
invenio_pages/translations/ca/LC_MESSAGES/: messages.po
invenio_pages/translations/cs/LC_MESSAGES/: messages.po
invenio_pages/translations/da/LC_MESSAGES/: messages.po
invenio_pages/translations/de/LC_MESSAGES/: messages.po
invenio_pages/translations/de_AT/LC_MESSAGES/: messages.po
invenio_pages/translations/de_DE/LC_MESSAGES/: messages.po
invenio_pages/translations/el/LC_MESSAGES/: messages.po
invenio_pages/translations/en/LC_MESSAGES/: messages.po
invenio_pages/translations/en_AT/LC_MESSAGES/: messages.po
invenio_pages/translations/en_HU/LC_MESSAGES/: messages.po
invenio_pages/translations/es/LC_MESSAGES/: messages.po
invenio_pages/translations/es_CU/LC_MESSAGES/: messages.po
invenio_pages/translations/es_MX/LC_MESSAGES/: messages.po
invenio_pages/translations/et/LC_MESSAGES/: messages.po
invenio_pages/translations/et_EE/LC_MESSAGES/: messages.po
invenio_pages/translations/fa/LC_MESSAGES/: messages.po
invenio_pages/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_pages/translations/fi/LC_MESSAGES/: messages.po
invenio_pages/translations/fr/LC_MESSAGES/: messages.po
invenio_pages/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_pages/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_pages/translations/gl/LC_MESSAGES/: messages.po
invenio_pages/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_pages/translations/hr/LC_MESSAGES/: messages.po
invenio_pages/translations/hu/LC_MESSAGES/: messages.po
invenio_pages/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_pages/translations/it/LC_MESSAGES/: messages.po
invenio_pages/translations/ja/LC_MESSAGES/: messages.po
invenio_pages/translations/ka/LC_MESSAGES/: messages.po
invenio_pages/translations/ko/LC_MESSAGES/: messages.po
invenio_pages/translations/lt/LC_MESSAGES/: messages.po
invenio_pages/translations/ne/LC_MESSAGES/: messages.po
invenio_pages/translations/no/LC_MESSAGES/: messages.po
invenio_pages/translations/pl/LC_MESSAGES/: messages.po
invenio_pages/translations/pt/LC_MESSAGES/: messages.po
invenio_pages/translations/ro/LC_MESSAGES/: messages.po
invenio_pages/translations/ru/LC_MESSAGES/: messages.po
invenio_pages/translations/rw/LC_MESSAGES/: messages.po
invenio_pages/translations/sk/LC_MESSAGES/: messages.po
invenio_pages/translations/sv/LC_MESSAGES/: messages.po
invenio_pages/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_pages/translations/tr/LC_MESSAGES/: messages.po
invenio_pages/translations/uk/LC_MESSAGES/: messages.po
invenio_pages/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_pages/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_pages/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_pages/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_pages/upgrades/: pages_2014_04_22_new_model.py
tests/: conftest.py  test_admin.py  test_examples_app.py  test_invenio_pages.py  test_models.py  test_pages.py  test_rest.py  test_views.py
tests/alembic/: test_alembic.py
tests/records/: test_records.py
tests/resources/: test_resources.py
tests/services/: test_services.py
