# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015, 2016, 2022 CERN.
#
# Invenio is free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# Invenio is distributed in the hope that it will be
# useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Invenio; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
# MA 02111-1307, USA.
#
# In applying this license, CERN does not
# waive the privileges and immunities granted to it by virtue of its status
# as an Intergovernmental Organization or submit itself to any jurisdiction.


[metadata]
name = invenio-pages
version = attr: invenio_pages.__version__
description = InvenioRDM module for the static pages feature.
long_description = file: README.rst, CHANGES.rst
keywords = invenio pages
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-pages
classifiers =
    Development Status :: 5 - Production/Stable

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.10
    invenio-rest>=1.2.0

[options.extras_require]
tests =
    pytest-cache>=1.0
    pytest-black>=0.3.0
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_pages = invenio_pages:InvenioPages
invenio_base.api_apps =
    invenio_pages_rest = invenio_pages:InvenioPagesREST
invenio_i18n.translations =
    messages = invenio_pages
invenio_db.models =
    invenio_pages = invenio_pages.models
invenio_base.blueprints =
    invenio_pages = invenio_pages.views:blueprint
invenio_base.api_blueprints =
    invenio_pages_rest = invenio_pages.rest:blueprint
invenio_db.alembic =
    invenio_pages = invenio_pages:alembic

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_pages/translations/messages.pot
add-comments = NOTE

[compile_catalog]
directory = invenio_pages/translations/

[init_catalog]
input-file = invenio_pages/translations/messages.pot
output-dir = invenio_pages/translations/

[pydocstyle]
add_ignore = D401

[update_catalog]
input-file = invenio_pages/translations/messages.pot
output-dir = invenio_pages/translations/

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_pages --cov-report=term-missing
testpaths = docs tests invenio_pages
